[workspace]
resolver = "2"
members = ["crates/nping-core", "crates/ntrace-core", "crates/nmapper-core", "crates/nettools-web", "crates/nettools-cli"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
