[package]
name = "nettools-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified web dashboard for nettools"

[dependencies]
nping-core = { path = "../nping-core" }
ntrace-core = { path = "../ntrace-core" }
nmapper-core = { path = "../nmapper-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["mime-guess"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
mime_guess = "2"
chrono = { version = "0.4", features = ["serde"] }
