[package]
name = "nmapper-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nping-core = { path = "../nping-core" }
ipnet = { version = "2", features = ["serde"] }
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
zip = "2"
md-5 = "0.10"
sha1 = "0.10"
hmac = "0.12"
cbc = { version = "0.1", features = ["alloc"] }
des = "0.8"
aes = "0.8"
cfb-mode = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Networking_WinSock",
] }
