[package]
name = "ntrace-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traceroute engine library"

[dependencies]
tokio = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nping-core = { path = "../nping-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["enrichment"]
enrichment = ["reqwest"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
